--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,7 @@
     <!-- Content Block-->
     {% block content%}
     <div class="container">
-            {{ macro.dispalyNewsList(top) }}
+            {{ macro.displayNewsList(top) }}
     </div>
     {% endblock %}
 </body>
