--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,4 +1,4 @@
-{% macro dispalyNewsList(news_list) %}
+{% macro displayNewsList(news_list) %}
 {% for new in news_list %}
 <div class="row featurette">
     <div class="col-md-4">
