--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -6,7 +6,7 @@
     <h3 class="text-center"> Found {{ news | count }} matches </h3>
     <hr><br><br><br>
 
-    {{ macro.dispalyNewsList(news) }}
+    {{ macro.displayNewsList(news) }}
 
 </div>
 
