--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -16,5 +16,6 @@
     <button class="btn btn-success" type="submit" value="submit" >Search</button>
   </form>
 </nav>
+<img src="https://idonsabi.com/wp-content/uploads/2018/12/Headlines-Today-News.jpg" width="100%" height="200px">
 </div>
 
